# poetry-aws-lambda-plugin

./: pyproject.toml
src/poetry_aws_lambda_plugin/: application.py
src/poetry_aws_lambda_plugin/commands/: aws_lambda_build.py
